# My-practice-recode

./: CMakeLists.txt  README.md  main.cpp  practice.cpp  practice2.cpp  practice3.cpp  practice4.cpp  practice5.cpp  practice6.cpp  practice7.cpp  practice8.cpp
