cmake_minimum_required(VERSION 3.28)
project(CL)

set(CMAKE_CXX_STANDARD 17)

add_executable(CL main.cpp)
add_executable(practice practice.cpp)
add_executable(practice2 practice2.cpp)
add_executable(practice3 practice3.cpp)
add_executable(practice4 practice4.cpp)
add_executable(practice5 practice5.cpp)